--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ title: JIAN
 subtitle:
 description:
 keywords:
-author: jian
+author: jianjustin
 language: zh-cn
 timezone:
 
 # URL
-url: https://www.jianjustin.github.io/
+url: https://jianjustin.github.io/blog
 root: /blog
 permalink: :year/:month/:day/:title/
 
@@ -55,7 +55,7 @@ mode: archives
 # Theme Settings
 # ===========================================
 # color: default | mint green | cobalt blue | hot pink | dark violet
-color: default
+color: dark violet
 
 # path: Root path for your blogs index page. (default = '')
 # per_page: Posts displayed per page. (0 = disable pagination)
