--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: --lts
 before_script:
   - git config user.name "jianjustin"
   - git config user.email "janine.jian.chen@gmail.com"
-  - sed -i'' "s~https://github.com/jianjustin/jianjustin.github.io.git~https://${GITHUB_ACCESS_TOKEN}@github.com/jianjustin/jianjustin.github.io.git~" _config.yml
+  - sed -i'' "s~https://github.com/jianjustin/blog.git~https://${GITHUB_ACCESS_TOKEN}@github.com/jianjustin/blog.git~" _config.yml
 script:
   - hexo g
   - hexo d
