--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ before_script:
   - git config user.email "janine.jian.chen@gmail.com"
   - sed -i'' "s~https://github.com/jianjustin/blog.git~https://${GITHUB_ACCESS_TOKEN}@github.com/jianjustin/blog.git~" _config.yml
 script:
-  - hexo g
-  - hexo d
+  - hexo clean
+  - hexo deploy
