reset readme config

--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,6 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: README.md
-_internal: lib
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -92,7 +90,7 @@ feed:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/jianjustin/jianjustin.github.io
+  repo: https://github.com/jianjustin/jianjustin.github.io.git
   branch: master
   message: "Docs updated: {{ now('YYYY-MM-DD HH:mm:ss') }})"
 
