test travis config

--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,8 @@ feed:
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/jianjustin/jianjustin.github.io.git
+  repo: https://access_token@github.com/jianjustin/jianjustin.github.io.git
+ #repo: https://github.com/jianjustin/jianjustin.github.io.git
   branch: master
   message: "Docs updated: {{ now('YYYY-MM-DD HH:mm:ss') }})"
 
