--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,19 @@
 language: node_js
 node_js: 
    - '8'
-before_script:
-  - git config user.name "jianjustin"
-  - git config user.email "janine.jian.chen@gmail.com"
-  - sed -i'' "s~https://github.com/jianjustin/jianjustin.github.io.git~https://${ACCESS_TOKEN}@github.com/jianjustin/jianjustin.github.io.git~" _config.yml
+cache:
+  directories:
+    - node_modules
+before_install:
+  - npm install -g hexo-cli
 install:
-- npm install
+  - npm install
+  - npm install hexo-deployer-git --save
 script:
   - hexo clean
+  - hexo generate
+after_script:
+  - git config user.name "jianjustin"
+  - git config user.email "janine.jian.chen@gmail.com"
+  - sed -i "s/access_token/${ACCESS_TOKEN}/g" ./_config.yml
   - hexo deploy
