--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ feed:
 deploy:
   type: git
   #repo: https://access_token@github.com/jianjustin/jianjustin.github.io.git
-  repo: https://github.com/jianjustin/jianjustin.github.io.git
+  repo: https://github.com/jianjustin/love.git
   branch: master
   message: "Docs updated: {{ now('YYYY-MM-DD HH:mm:ss') }})"
 
